app-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-a
    app.kubernetes.io/component: app-a
    app.kubernetes.io/instance: app-a
    app.kubernetes.io/part-of: app-a
    app.openshift.io/runtime: redhat
  name: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-a
        version: v1
        #TODO app.kubernetes.io/version: v1
      #annotations:
      #  sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: app-a:latest
        imagePullPolicy: Always
        name: app-a
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault 
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
