app-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-a
  name: service-a
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-a
  sessionAffinity: None
  type: ClusterIP
